--- a/tours-api/package.json
+++ b/tours-api/package.json
@@ -24,8 +24,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@prisma/client": "^6.12.0",
+    "@nestjs/platform-socket.io": "^10.4.19",
     "@nestjs/swagger": "^8.0.7",
+    "@nestjs/websockets": "^10.4.19",
+    "@prisma/client": "^6.12.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.0",
