--- a/tours-app/package.json
+++ b/tours-app/package.json
@@ -18,7 +18,9 @@
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
-    "zod": "^4.0.10"
+    "socket.io-client": "^4.8.1",
+    "zod": "^4.0.10",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
