--- a/tours-api/.env.example
+++ b/tours-api/.env.example
@@ -1,3 +1,3 @@
 DATABASE_URL="postgresql://<USER>:<PASSWORD>@<HOST>:<PORT>/<DATABASE_NAME>schema=public&connection_limit=5&socket_timeout=3"
 PORT=3000
-ORIGINS=http//:localhost:3000
+ORIGINS=http//:localhost:3000,http//:localhost:3001
