:rocket: add: general docs, local envs and resources

--- a/tours-api/Dockerfile
+++ b/tours-api/Dockerfile
@@ -13,7 +13,10 @@ COPY . .
 RUN npx prisma generate
 
 COPY start.sh ./start.sh
-RUN chmod +x start.sh
+
+RUN apk add --no-cache dos2unix \
+  && dos2unix start.sh \
+  && chmod +x start.sh
 
 RUN npm run build
 
@@ -28,7 +31,9 @@ COPY --from=builder /app/prisma ./prisma
 COPY --from=builder /app/start.sh ./start.sh
 COPY --from=builder /app/dist ./dist
 
-RUN chmod +x start.sh
+RUN apk add --no-cache dos2unix \
+  && dos2unix start.sh \
+  && chmod +x start.sh
 
 EXPOSE 3001
 
