--- a/tours-api/docker-compose.yaml
+++ b/tours-api/docker-compose.yaml
@@ -22,4 +22,4 @@ services:
     environment:
       - DATABASE_URL=postgresql://postgres:hajshajskh1212@postgres:5432/tours-db?schema=public&connection_limit=5&socket_timeout=3
       - PORT=3001
-      - ORIGINS=http://localhost:3000,http//:localhost:3001
+      - ORIGINS=http://localhost:3000,http://localhost:3001
