--- a/tours-api/.env
+++ b/tours-api/.env
@@ -1,3 +1,3 @@
 DATABASE_URL="postgresql://postgres:hajshajskh1212@localhost:5432/tours-db?schema=public&connection_limit=5&socket_timeout=3"
 PORT=3001
-ORIGINS=http//:localhost:3000,http//:localhost:3001
+ORIGINS=http://localhost:3000,http://localhost:3001
